prodMetadata/src/objects/Library_Documents__c.object
<CustomObject>
    <description>Research team records</description>
    <fields>
        <fullName>Author_1_First_Name__c</fullName>
        <label>Author 1 First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author_1_Last_Name__c</fullName>
        <label>Author 1 Last Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author_2_First_Name__c</fullName>
        <label>Author 2 First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author_2_Last_Name__c</fullName>
        <label>Author 2 Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citation_Template__c</fullName>
        <description>Report Citation</description>
        <formula>Author_1_Last_Name__c &amp;&quot;, &quot;&amp; Author_1_First_Name__c &amp;&quot;. (&quot;&amp; Year_Published__c &amp;&quot;). &quot;&amp;  Name &amp;&quot;. &quot;&amp; Publication__c &amp;&quot;, &quot;&amp; Volume__c &amp;&quot;(&quot;&amp; Issue__c &amp;&quot;), &quot;&amp; Page_Numbers__c &amp;&quot;. Retrieved from: &quot;&amp; Report_Link__c &amp;&quot;.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Report Citation</inlineHelpText>
        <label>Citation Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Published__c</fullName>
        <label>Date Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Numbers__c</fullName>
        <label>Page Numbers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <displayFormat>LD-{0000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Report_Link__c</fullName>
        <label>Report Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Report_Summary__c</fullName>
        <description>Report Summary</description>
        <inlineHelpText>Report Summary</inlineHelpText>
        <label>Report Summary</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>non-VSO Advocacy Organization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Report_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Published__c</fullName>
        <formula>TEXT(YEAR(Date_Published__c))</formula>
        <label>Year Published</label>
        <type>Text</type>
    </fields>
    <label>Library Documents</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year_Published__c</columns>
        <columns>Reference_Number__c</columns>
        <columns>Report_Type__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Issue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IAVA_Statements_HVAC_5_13_15</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>IAVA Statements HVAC 5/13/15</label>
    </listViews>
    <listViews>
        <fullName>Submission_of_Mental_Health_Records_NICS</fullName>
        <columns>NAME</columns>
        <columns>Author_1_First_Name__c</columns>
        <columns>Author_1_Last_Name__c</columns>
        <columns>Author_2_First_Name__c</columns>
        <columns>Author_2_Last_Name__c</columns>
        <columns>Citation_Template__c</columns>
        <columns>Date_Published__c</columns>
        <columns>Issue__c</columns>
        <columns>Publication__c</columns>
        <columns>Report_Link__c</columns>
        <columns>Report_Summary__c</columns>
        <columns>Report_Type__c</columns>
        <columns>Reviewed_By__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Year_Published__c</columns>
        <filterScope>Everything</filterScope>
        <label>Submission of Mental Health Records NICS</label>
    </listViews>
    <nameField>
        <label>Library Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>